--- a/enquery.html
+++ b/enquery.html
@@ -13,7 +13,7 @@
         <img src="Images\Logo.png" width="300">
         <nav id="nav-menu">
             <ul>
-                <li><a href="10.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="Contact.html">Contact us</a></li>
                 <li><a href="a.html">About us</a></li>
                 <li><a href="login.html">Login</a></li>
