--- a/a.html
+++ b/a.html
@@ -15,7 +15,7 @@
         <nav>
             <img src="Images\Logo.png" width="150">
             <ul class="nav-links">
-                <li><a href="10.html">
+                <li><a href="index.html">
                   Home</a>
                   </li>
                 <li><a href="enquery.html">
