--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
 	<!-- Header showcase-->
 	<header class="showcase">
-		<div class="container" style="width: 100%;">
-			<nav>
+		<nav>
 				<div>
 					<a href="#"><i class="fa fa-mobile-alt"></i> Get the App</a>
 				</div>
@@ -22,6 +21,7 @@
 				
 				</div>
 			</nav>
+		<div class="container" style="width: 100%">
 			<div class="hero-text">
 				<img src="Images\Logo.png" width="300">
 				<h1>Discover the best food & drinks in <span class="bold-place">Mumbai</span></h1>
