--- a/dine-in.html
+++ b/dine-in.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid custom-bg custom-margin-bottom custom-padding-left custom-padding-right">
-          <a class="navbar-brand" href="10.html">HOME</a>
+          <a class="navbar-brand" href="index.html">HOME</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span> 
           </button>
