--- a/dine-in.html
+++ b/dine-in.html
@@ -39,21 +39,21 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="photo-booth-to-remember.jpg" class="d-block w-100 custom-height custom-width custom-br" alt="...">
+            <img src="Images\photo-booth-to-remember.jpg" class="d-block w-100 custom-height custom-width custom-br" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h2>Namak</h2>
               <p>Indian, Vegetarian Friendly, Vegan Options, Halal, Gluten Free Options</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="fiona.jpg" class="d-block w-100 custom-height custom-br" alt="...">
+            <img src="Images\fiona.jpg" class="d-block w-100 custom-height custom-br" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h2>FIONA</h2>
               <p>Italian, Indian, Asian, Bar, Vegetarian Friendly, Vegan Options</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="tuskers.jpg" class="d-block w-100 custom-height custom-br" alt="...">
+            <img src="Images\tuskers.jpg" class="d-block w-100 custom-height custom-br" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h2>TUSKERS</h2>
               <p>Relish the authentic taste of India at Mumbai’s only 5-star vegetarian restaurant with a dedicated kitchen. </p>
@@ -74,7 +74,7 @@
     <div class="grided">
       <div class="grid-ite">
         <div class="imge">
-          <img src="set-sail.jpg" style="height: 250px; width: 405px;border-radius: 10px;" alt="">
+          <img src="Images\set-sail.jpg" style="height: 250px; width: 405px;border-radius: 10px;" alt="">
         </div>
         <div class="written">
           <h1>AER Mumbai</h1>
@@ -86,7 +86,7 @@
       </div>
       <div class="grid-ite">
         <div class="imge">
-          <img src="inside-view-of-lagoon.jpg" style="height: 250px; width: 405px;border-radius: 10px;" alt="">
+          <img src="Images\inside-view-of-lagoon.jpg" style="height: 250px; width: 405px;border-radius: 10px;" alt="">
         </div>
         <div class="written">
           <h1>MABRUK</h1>
@@ -97,49 +97,49 @@
         </div>
       </div>
       <div class="grid-ite"><div class="imge">
-        <img src="lake-view-cafe.jpg" style="height: 250px; width: 405px;border-radius: 10px;" alt="">
+        <img src="Images\lake-view-cafe.jpg" style="height: 250px; width: 405px;border-radius: 10px;" alt="">
       </div>
       <div class="written">
         <h1>Lake View Cafe</h1>
         <p>Local cuisine, Indian, Cafe, Asian, International, Vegetarian Friendly</p>
       </div></div>
       <div class="grid-ite" data-aos="fade-right"><div class="imge">
-        <img src="saptami-a-contemporary.jpg" style="height: 250px; width: 405px;border-radius: 10px;" alt="">
+        <img src="Images\saptami-a-contemporary.jpg" style="height: 250px; width: 405px;border-radius: 10px;" alt="">
       </div>
       <div class="written">
         <h1>SAPTAMI</h1>
         <p>Saptami - our all day dining restaurant offers authentic cuisines with efficient service and local knowledge</p>
       </div></div>
       <div class="grid-ite" data-aos="zoom-in"><div class="imge">
-        <img src="tresind-mumbai.jpg" style="height: 250px; width: 405px;border-radius: 10px;" alt="">
+        <img src="Images\tresind-mumbai.jpg" style="height: 250px; width: 405px;border-radius: 10px;" alt="">
       </div>
       <div class="written">
         <h1>Trèsind Mumbai</h1>
         <p>Trèsind is the birthplace of innovative Indian cuisine. It was introduced in 2014 in Dubai</p>
       </div></div>
       <div class="grid-ite" data-aos="fade-left"><div class="imge">
-        <img src="by-the-mekong-lounge.jpg" style="height: 250px; width: 405px;border-radius: 10px;" alt="">
+        <img src="Images\by-the-mekong-lounge.jpg" style="height: 250px; width: 405px;border-radius: 10px;" alt="">
       </div>
       <div class="written">
         <h1>BY THE Mekong</h1>
         <p>The highest Oriental dining venue in India, By the Mekong in Mumbai blends Chinese</p>
       </div></div>
       <div class="grid-ite" data-aos="fade-right"><div class="imge">
-        <img src="bar.jpg" style="height: 250px; width: 405px;border-radius: 10px;" alt="">
+        <img src="Images\bar.jpg" style="height: 250px; width: 405px;border-radius: 10px;" alt="">
       </div>
       <div class="written">
         <h1>DASHANZI</h1>
         <p>A stylish sea-facing restaurant and bar, Dashanzi is the destination to explore</p>
       </div></div>
       <div class="grid-ite" data-aos="zoom-in"><div class="imge">
-        <img src="ready-to-serve-you-an.jpg" style="height: 250px; width: 405px;border-radius: 10px;" alt="">
+        <img src="Images\ready-to-serve-you-an.jpg" style="height: 250px; width: 405px;border-radius: 10px;" alt="">
       </div>
       <div class="written">
         <h1>FUMI - East Asian Spice Trail</h1>
         <p>Chinese, Japanese, Asian, Thai, Sushi, Vegetarian Friendly</p>
       </div></div>
       <div class="grid-ite" data-aos="fade-left"><div class="imge">
-        <img src="lotus-cafe-all-day-dining.jpg" style="height: 250px; width: 405px;border-radius: 10px;" alt="">
+        <img src="Images\lotus-cafe-all-day-dining.jpg" style="height: 250px; width: 405px;border-radius: 10px;" alt="">
       </div>
       <div class="written">
         <h1>LOTUS CAFE</h1>
@@ -149,9 +149,9 @@
       <section class="footer-bar" style="margin-top: 1500px;">
         <div class="container">
           <div class="footer-lang">
-            <img class="footer-logo" src="Zwigato logo.png" >
+            <img class="footer-logo" src="Images\Zwigato logo.png" >
             <div class="btn-lang-top">
-              <a class="lang-btn" href="#"><img src="india-flag.jpg" height="13px"> India <small><i class="fa fa-chevron-down"></i></small></a>
+              <a class="lang-btn" href="#"><img src="Images\india-flag.jpg" height="13px"> India <small><i class="fa fa-chevron-down"></i></small></a>
               <a class="lang-btn" href="#"> <i class="fa fa-globe"></i> English <small><i class="fa fa-chevron-down"></i></small></a>
             </div>
           </div>
@@ -195,8 +195,8 @@
                 <a href="#"><i class="fab fa-instagram"></i></a>
               </div>
               <div>
-                <img src="app-store1.webp" width="137px">
-                <img src="app-store2.webp" width="137px">
+                <img src="Images\app-store1.webp" width="137px">
+                <img src="Images\app-store2.webp" width="137px">
               </div>
             </div>
           </div>
