--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				</div>
 			</div>
 			<div class="hover">
-				<img src="Images\order2.webp">
+				<a href="pro.html"><img src="Images\order2.webp"></a>
 				<div class="order-title-bg">
 					<p class="order-title">Go out for a meal</p>
 				</div>
